<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bleeding Risk</string>
    <string name="action_settings">Settings</string>
    <string name="action_disclaimer">Disclaimer</string>

    <string name="subscores">PCI Bleeding Risk Factor Subscores</string>
    <string name="score">Score:</string>
    <string name="percent">Bleeding Risk:</string>
    <string name="calc_instructions">Select the Patient\'s Risk Factors</string>
    <string name="instructions">To calculate the post procedure bleeding risk, total up
        these risk factor subscores.</string>
    <string name="liability">This application is not intended for medical use. Any information or
        results displayed herein are not medical advice and are for reference only. Any
        harm to persons or property as a result of using this application is the sole
        responsibility of the user. By continuing to use this application you release the
        developer from all liability. If you have any health questions or concerns please contact
        a physician.</string>

    <string name="zero">00.0</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="stemi_subscores">STEMI:\n No(0) Yes(15)</string>
    <string name="stemi">STEMI</string>

    <string name="age_subscores">Age (years):\n &lt;60(0) 60–70(10) 71–79(15) &gt;80(20)</string>
    <string name="age">Age (years)</string>
    <string name="age_option1">&lt;60</string>
    <string name="age_option2">60–70</string>
    <string name="age_option3">71–79</string>
    <string name="age_option4">&gt;80</string>

    <string name="bmi_subscores">BMI:\n &lt;20(15) 20–30(5) 31–39(0) &gt;40(5)</string>
    <string name="bmi">BMI</string>
    <string name="bmi_option1">&lt;20</string>
    <string name="bmi_option2">20–30</string>
    <string name="bmi_option3">31–39</string>
    <string name="bmi_option4">&gt;40</string>

    <string name="previous_pci_subscores">Previous PCI:\n No(10) Yes(0)</string>
    <string name="previous_pci">Previous PCI</string>

    <string name="chronic_kidney_subscores">Chronic Kidney Disease:\n No(0) Mild(10) Moderate(25) Dialysis(30)</string>
    <string name="chronic_kidney">Chronic Kidney Disease</string>
    <string name="chronic_kidney_option2">Mild</string>
    <string name="chronic_kidney_option3">Moderate</string>
    <string name="chronic_kidney_option4">Dialysis</string>

    <string name="shock_subscores">Shock:\n No(0) Yes(35)</string>
    <string name="shock">Shock</string>

    <string name="cardiac_arrest_subscores">Cardiac Arrest within 24h:\n No(0) Yes(15)</string>
    <string name="cardiac_arrest">Cardiac Arrest within 24 hours</string>

    <string name="gender_subscores">Gender:\n Male(0) Female(20)</string>
    <string name="gender">Gender</string>
    <string name="gender_option1">Male</string>
    <string name="gender_option2">Female</string>

    <string name="hb_subscores">Hb:\n &lt;13(5) 13–15(0) &gt;15(10)</string>
    <string name="hb">Hb</string>
    <string name="hb_option1">&lt;13</string>
    <string name="hb_option2">13–15</string>
    <string name="hb_option3">&gt;15</string>

    <string name="pci_status_subscores">PCI Status:\n Elective(0) Urgent(20) Emergency/Salvage(40)</string>
    <string name="pci_status">PCI Status</string>
    <string name="pci_status_option1">Elective</string>
    <string name="pci_status_option2">Urgent</string>
    <string name="pci_status_option3">Emergency/Salvage</string>

    <string name="score_list">0\n5\n10\n15\n20\n25\n30\n35\n40\n45\n50\n55\n60\n65\n70\n75\n80\n85\n90\n95\n100\n105\n110\n115\n120\n125\n130\n135\n140\n145\n150\n155\n160\n165\n170\n175\n180\n185\n190\n195\n200\n205\n210\n</string>
    <string name="percentage_list">0.9\n1.1\n1.3\n1.5\n1.7\n2.0\n2.3\n2.7\n3.1\n3.6\n4.2\n4.9\n5.6\n6.5\n7.5\n8.6\n9.9\n11.4\n13.1\n14.9\n17.0\n19.3\n21.8\n24.6\n27.5\n30.7\n34.1\n37.6\n41.3\n45.1\n49.0\n52.8\n56.6\n60.4\n64.0\n67.5\n70.8\n73.9\n76.8\n79.4\n81.8\n84.0\n86.0\n</string>

    <string name="title_tab1">Calculate</string>
    <string name="title_tab2">Subscores</string>
    <string name="title_tab3">Probabilities</string>
    <string name="reset">RESET</string>
</resources>
