<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="5dp">
        <TextView
            android:text="@string/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="right"
            android:layout_weight=".25"/>
        <TextView
            android:layout_weight=".5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="left"
            android:layout_weight=".25"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:padding="5dp">
            <TextView
                android:text="@string/score_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="right"
                android:layout_weight=".25"/>
            <TextView
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/percentage_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="left"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>